# game-of-life-python

./: README.md  pyproject.toml  requirements.txt  todo.txt
game_of_life/: game.py  music.py  mygamefile.py  mypygamefile.py  resources.py  test_game.py
