[tool.poetry]
name = "game-of-life-python"
version = "0.1.0"
description = ""
authors = ["Erik Kristofer Anderson <erik.kristofer.anderson@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pygame = "^2.1.2"
synthesizer = "^0.2.0"
PyAudio = "^0.2.11"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
